--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=MyAPP
+server.port=9292
+spring.datasource.url=jdbc:sqlserver://localhost:1433;database=MyDB;trustServerCertificate=true;
+spring.datasource.username=Admin
+spring.datasource.password=Admin
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#JPA Config
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.ddl-auto=update
+
+
+
+# update -> Hibernate sozdayot strukturu db
